# new-oldschool

./: CMakeLists.txt  README.md
asm/: moving-pixel.s
include/6502/: _unused-templatedprocessor.h  processor.h
include/6502/InstructionSet/: address_modes.def  address_space.h  instrs.def  instrs.h  mnemonics.def
include/HotReload/: filewatcher.h
src/: processor.cpp  sfem.cpp
src/HotReload/: filewatcher.cpp
